# computer_vision

./: CMakeLists.txt  Makefile  README.md  build.sh  build_run.sh  run.sh
include/: image_filters.hpp  image_func.hpp  mouse_callbacks.hpp  pixel_transform.hpp  trackbar_callbacks.hpp
src/: image_filters.cpp  image_func.cpp  main.cpp  mouse_callbacks.cpp  pixel_transform.cpp  resize_img.cpp  test_filters.cpp  test_transformations.cpp  trackbar_callbacks.cpp
src/lab1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
src/lab2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
src/lab3/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
src/lab4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
